Added table page link to course home page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li>07. <a href="lesson07/lazyload.html">Lazy Loading</a> |
                     <a href="lesson07/bom.html">Top 10 - localStorage</a>
                 </li>
-                <li>08. <a></a></li>
+                <li>08. <a href="lesson08/tablebuild.html">HTML Tables</a></li>
                 <li>09. <a></a></li>
                 <li>10. <a></a></li>
             </ul>
