Started HTML forms activity

--- a/lesson08/tablebuild.html
+++ b/lesson08/tablebuild.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Tables</title>
+    <meta name="description" content="HTML tables learning activity">
+    <meta name="author" content="Jennifer Weber">
+
+    <meta property="og:title" content="HTML tables learning activity">
 
     <link rel="stylesheet" href="styles/tablebuild.css">
 </head>
