Created Join page and added basic styling

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nampa Chamber of Commerce Discover Page</title>
-    <meta name="description" content="This is the discover page for the 
+    <title>Nampa Chamber of Commerce Home Page</title>
+    <meta name="description" content="This is the home page for the 
     Nampa Chamber of Commerce site, created for WDD - 230. ">
     <meta name="author" content="Jennifer Weber">
 
-    <meta property="og:title" content="Nampa Chamber of Commerce Discover Page">
+    <meta property="og:title" content="Nampa Chamber of Commerce Join Page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://u.realgeeks.media/stewartrealtyllc/nampa-2100x1440.jpg">
     <meta property="og:url" content="https://jkweber236.github.io/wdd230/chamber/">
@@ -34,50 +34,13 @@
         </div>
         <nav>
             <a rel="home" href="index.html">Home</a>
-            <a rel="discover" href="#">Discover</a>
+            <a rel="discover" href="discover.html">Discover</a>
             <a rel="directory" href="#">Directory</a>
-            <a rel="join" href="join.html">Join</a>
+            <a rel="join" href="#">Join</a>
         </nav>
     </header>
-    <main id="discover">
-        <div class="left-content">
-            <p id="lastVisit"></p>
-            <div class="demographics">
-                <h2>Demographics (as of 2023)</h2>
-                <p>Total Population: 109,926</p>
-                <p>Male: 49.3%</p>
-                <p>Female: 50.7%</p>
-                <p>Average Household Size: 2.81</p>
-            </div>
-            <div class="city-council">
-                <h2>City Council</h2>
-                <h3>Mayor</h3>
-                <p>Debbie Kling</p>
-                <h3>Council Members</h3>
-                <p>Victor Rodriquez</p>
-                <p>Natalie Jangula</p>
-                <p>David Bills</p>
-                <p>Dale Reynolds</p>
-                <p>Randy Haverfield</p>
-                <p>Sebastian Griffin</p>
-            </div>
-        </div>
-        <div class="right-content">
-            <div class="local-photos">
-                <img src="images/nampa-sign.webp" alt="Nampa Welcome Sign" loading="lazy">
-                <p>Nampa Welcome sign</p>
-                <img src="images/nampa-depot.webp" alt="Nampa Train Depot" loading="lazy">
-                <p>Nampa Train Depot</p>
-                <img src="images/nampa-arcade.webp" alt="Jeremy's Downtown Arcade" loading="lazy">
-                <p>Jeremy's Downtown Arcade</p>
-                <img src="images/reel-theather.webp" alt="Reel Theather" loading="lazy">
-                <p>Reel Theather</p>
-                <img src="images/roaring-springs.webp" alt="Roaring Springs" loading="lazy">
-                <p>Roaring Springs</p>
-                <img src="images/wahooz.webp" alt="Wahooz" loading="lazy">
-                <p>Wahooz</p>
-            </div>
-        </div>
+    <main class="thankyou">
+        <h2>Thank you for applying to the Nampa Chamber of Commerce</h2>
     </main>
     <footer>
         <img src="images/logo.webp" alt="Nampa Commerce Logo">
@@ -102,8 +65,6 @@
     <script src="scripts/getdates.js"></script>
     <script src="scripts/responsive-menu.js"></script>
     <script src="scripts/dark-mode.js"></script>
-    <script src="scripts/windchill.js"></script>
-    <script src="scripts/last-visit.js"></script>
 </body>
 
 </html>
