--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
             <a rel="home" href="#">Home</a>
             <a rel="discover" href="discover.html">Discover</a>
             <a rel="directory" href="#">Directory</a>
-            <a rel="join" href="#">Join</a>
+            <a rel="join" href="join.html">Join</a>
         </nav>
     </header>
     <main class="home">
