--- a/chamber/join.html
+++ b/chamber/join.html
@@ -53,7 +53,7 @@
                 <label for="email">Email Address:</label><br>
                 <input type="email" id="email" name="email" placeholder="email123@gmail.com" required><br>
                 <label for="phone">Mobile Phone Number:</label><br>
-                <input type="telephone" id="phone" name="phone" required><br>
+                <input type="tel" id="phone" name="phone" required><br>
             </fieldset>
             <fieldset id="business-info">
                 <legend>Business Information</legend>
