Updated dark mode coloring

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,7 +43,6 @@
     </header>
     <main class="join">
         <form id="join-form" method="get" action="thankyou.html">
-            <div id="error-message"></div>
             <fieldset id="contact-info">
                 <legend>Applicant Information</legend>
                 <label for="fname">First Name:</label><br>
@@ -55,6 +54,7 @@
                 <label for="phone">Mobile Phone Number:</label><br>
                 <input type="tel" id="phone" name="phone" required><br>
             </fieldset>
+            <div id="error-message"></div>
             <fieldset id="business-info">
                 <legend>Business Information</legend>
                 <label for="business">Business/Organization Name:</label><br>
@@ -80,7 +80,7 @@
 
             <thead>
                 <tr>
-                    <th id="tabletitle" colspan="5" scope="colgroup">Membership Benefits</th>
+                    <th id="table-title" colspan="5" scope="colgroup">Membership Benefits</th>
                 </tr>
                 <tr>
                     <th scope="col"></th>
@@ -88,7 +88,6 @@
                     <th scope="col">Bronze</th>
                     <th scope="col">Silver</th>
                     <th scope="col">Gold</th>
-
                 </tr>
             </thead>
 
