Finished styling join page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li>08. <a href="lesson08/tablebuild.html">HTML Tables</a> |
                     <a href="form.html">Form Build</a>
                 </li>
-                <li>09. <a></a></li>
+                <li>09. <a href="lesson09/new-ward-members.json">New Ward Members JSON</a></li>
                 <li>10. <a></a></li>
             </ul>
         </section>
