Added aria-labels to remove errors

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -62,7 +62,8 @@
                 <label for="position-title">Title/Position:</label><br>
                 <input type="text" id="position-title" name="position-title" required><br>
                 <label for="business-desc">Business/Organization Description</label><br>
-                <label><textarea id="business-desc" name="business-desc"></textarea></label><br>
+                <label><textarea id="business-desc" name="business-desc"
+                        aria-label="description-box"></textarea></label><br>
                 <label for="benefit-level">Membership Level</label><br>
                 <select id="benefit-level" name="benefit-level">
                     <option value="" selected disabled hidden>Select</option>
@@ -77,13 +78,12 @@
         </form>
         <Table id="membership-benefits">
             <caption>Table 1: Membership Benefits Comparison</caption>
-
             <thead>
                 <tr>
                     <th id="table-title" colspan="5" scope="colgroup">Membership Benefits</th>
                 </tr>
                 <tr>
-                    <th scope="col"></th>
+                    <th scope="col" aria-label="blank"></th>
                     <th scope="col">Non-Profit</th>
                     <th scope="col">Bronze</th>
                     <th scope="col">Silver</th>
