Attempt to fix aria-label error

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -63,7 +63,7 @@
                 <input type="text" id="position-title" name="position-title" required><br>
                 <label for="business-desc">Business/Organization Description</label><br>
                 <label><textarea id="business-desc" name="business-desc"
-                        aria-label="description-box"></textarea></label><br>
+                        aria-labelledby="business-desc"></textarea></label><br>
                 <label for="benefit-level">Membership Level</label><br>
                 <select id="benefit-level" name="benefit-level">
                     <option value="" selected disabled hidden>Select</option>
