Attempt to fix accessibility error

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -62,8 +62,9 @@
                 <label for="position-title">Title/Position:</label><br>
                 <input type="text" id="position-title" name="position-title" required><br>
                 <label for="business-desc">Business/Organization Description</label><br>
-                <label><textarea id="business-desc" name="business-desc"
-                        aria-labelledby="business-desc"></textarea></label><br>
+                <label for="business-desc">
+                    <textarea id="business-desc" name="business-desc"></textarea>
+                </label><br>
                 <label for="benefit-level">Membership Level</label><br>
                 <select id="benefit-level" name="benefit-level">
                     <option value="" selected disabled hidden>Select</option>
