--- a/chamber/join.html
+++ b/chamber/join.html
@@ -83,7 +83,7 @@
                     <th id="table-title" colspan="5" scope="colgroup">Membership Benefits</th>
                 </tr>
                 <tr>
-                    <th scope="col" aria-hidden="true"></th>
+                    <th aria-hidden="true"></th>
                     <th scope="col">Non-Profit</th>
                     <th scope="col">Bronze</th>
                     <th scope="col">Silver</th>
