Added to JSON Menu Activity

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card" id="section1">
             <h3>Learning Activities</h3>
+            <div id="activity-links"></div>
+            <!--
             <ul>
                 <li>01. <a href="lesson01/holygrail.html">Holy Layout</a></li>
                 <li>02.
@@ -72,7 +74,7 @@
                 </li>
                 <li>09. <a href="lesson09/new-ward-members.json">New Ward Members JSON</a></li>
                 <li>10. <a></a></li>
-            </ul>
+            </ul> -->
         </section>
         <section class="card" id="section2">
             <h3>Information</h3>
@@ -93,6 +95,7 @@
     <script src="scripts/getdates.js"></script>
     <script src="scripts/responsive-menu.js"></script>
     <script src="scripts/page-visits.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 
 </html>
