Completed W09 JSON Data assignment

--- a/index.html
+++ b/index.html
@@ -49,32 +49,7 @@
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card" id="section1">
             <h3>Learning Activities</h3>
-            <div id="activity-links"></div>
-            <!--
-            <ul>
-                <li>01. <a href="lesson01/holygrail.html">Holy Layout</a></li>
-                <li>02.
-                    <a href="lesson02/media-query.html">Media Query</a> |
-                    <a href="lesson02/design-principles.html">Design Principles Document</a>
-                </li>
-                <li>03. <a href="lesson03/images/combinator-exercise.png">Combinators</a> |
-                    <a href="https://codepen.io/jkweber236-the-encoder/pen/bGJXXjP">Pseudo-Element</a> |
-                    <a href="https://codepen.io/jkweber236-the-encoder/pen/vYMoowQ">Responsive Menu</a>
-                </li>
-                <li>04. <a href="https://codepen.io/jkweber236-the-encoder/pen/ZENOePa">CSS Pseudo-Classes</a></li>
-                <li>05. <a href="lesson05/bom.html">Book of Mormon - Top 10</a></li>
-                <li>06. <a href="lesson06/images/landscape.webp">WebP</a> |
-                    <a href="lesson06/responsive-images.html">Responsive Images</a>
-                </li>
-                <li>07. <a href="lesson07/lazyload.html">Lazy Loading</a> |
-                    <a href="lesson07/bom.html">Top 10 - localStorage</a>
-                </li>
-                <li>08. <a href="lesson08/tablebuild.html">HTML Tables</a> |
-                    <a href="form.html">Form Build</a>
-                </li>
-                <li>09. <a href="lesson09/new-ward-members.json">New Ward Members JSON</a></li>
-                <li>10. <a></a></li>
-            </ul> -->
+            <ol id="activity-links"></ol>
         </section>
         <section class="card" id="section2">
             <h3>Information</h3>
