Created members.json for Chamber site

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -37,7 +37,7 @@
         <nav>
             <a rel="home" href="index.html">Home</a>
             <a rel="discover" href="discover.html">Discover</a>
-            <a rel="directory" href="#">Directory</a>
+            <a rel="directory" href="directory.html">Directory</a>
             <a rel="join" href="#">Join</a>
         </nav>
     </header>
