Changed info in member.json

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,9 +39,17 @@
             <a rel="join" href="join.html">Join</a>
         </nav>
     </header>
+
     <main class="directory">
+        <h2 id="title">Chamber Directory</h2>
+        <div class="view-menu">
+            <button id="grid-view">Grid View</button>
+            <button id="list-view">List View</button>
+        </div>
         <div id="cards"></div>
+        <div id="list"></div>
     </main>
+
     <footer>
         <img src="images/logo.webp" alt="Nampa Commerce Logo">
         <div class="contact-info">
@@ -66,6 +74,7 @@
     <script src="scripts/responsive-menu.js"></script>
     <script src="scripts/dark-mode.js"></script>
     <script src="scripts/windchill.js"></script>
+    <script src="scripts/directory.js"></script>
 </body>
 
 </html>
