Added all content to directory

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,9 +42,9 @@
 
     <main class="directory">
         <h2 id="title">Chamber Directory</h2>
-        <div class="view-menu">
-            <button id="grid-view">Grid View</button>
-            <button id="list-view">List View</button>
+        <div class="viewMenu">
+            <button id="gridview">Grid View</button>
+            <button id="listview">List View</button>
         </div>
         <div id="cards"></div>
         <div id="list"></div>
