Fixed typo and added some CSS

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -70,7 +70,7 @@
                 <p>Nampa Train Depot</p>
                 <img src="images/nampa-arcade.webp" alt="Jeremy's Downtown Arcade" loading="lazy">
                 <p>Jeremy's Downtown Arcade</p>
-                <img src="images/reel-theather.webp" alt="Reel Theather" loading="lazy">
+                <img src="images/reel-theater.webp" alt="Reel Theather" loading="lazy">
                 <p>Reel Theather</p>
                 <img src="images/roaring-springs.webp" alt="Roaring Springs" loading="lazy">
                 <p>Roaring Springs</p>
