Added styling to gridview and changed title for directory page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nampa Chamber of Commerce Home Page</title>
-    <meta name="description" content="This is the home page for the 
-    Nampa Chamber of Commerce site, created for WDD - 230. ">
+    <title>Directory of Memebers - Nampa Chamber of Commerce</title>
+    <meta name="description" content="This is the member directory page for the
+    Nampa Chamber of Commerce site. ">
     <meta name="author" content="Jennifer Weber">
 
-    <meta property="og:title" content="Nampa Chamber of Commerce Home Page">
+    <meta property="og:title" content="Nampa Chamber of Commerce Directory Page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://u.realgeeks.media/stewartrealtyllc/nampa-2100x1440.jpg">
     <meta property="og:url" content="https://jkweber236.github.io/wdd230/chamber/">
