--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Directory of Memebers - Nampa Chamber of Commerce</title>
+    <title>Directory of Members - Nampa Chamber of Commerce</title>
     <meta name="description" content="This is the member directory page for the
     Nampa Chamber of Commerce site. ">
     <meta name="author" content="Jennifer Weber">
