Added author and description to prophet page

--- a/lesson09/prophets.html
+++ b/lesson09/prophets.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prophets JSON</title>
-
+    <meta name="author" content="Jennifer Weber">
+    <meta name="description"
+        content="A webpage to display a list of latter-day prophets as a practice exercise for working with JSON data.">
     <link rel="stylesheet" href="styles/prophets.css">
 </head>
 
