--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
         <section class="card" id="section2">
             <h3>Information</h3>
             <p>Rexburg, Idaho</p>
-            <p>Weather</p>
+            <figure>
+                <img id="weather-icon" src="" alt="">
+                <span id="current-temp"> </span> &nbsp;-&nbsp;
+                <figcaption> </figcaption>
+            </figure>
             <p id="pageVisits"></p>
         </section>
     </main>
@@ -71,6 +75,7 @@
     <script src="scripts/responsive-menu.js"></script>
     <script src="scripts/page-visits.js"></script>
     <script src="scripts/links.js"></script>
+    <script src="scripts/weather.js"></script>
 </body>
 
 </html>
