--- a/chamber/join.html
+++ b/chamber/join.html
@@ -80,7 +80,7 @@
             <caption>Table 1: Membership Benefits Comparison</caption>
             <thead>
                 <tr>
-                    <th id="table-title" colspan="5" scope="colgroup">Membership Benefits</th>
+                    <th class="table-title" colspan="5" scope="colgroup">Membership Benefits</th>
                 </tr>
                 <tr>
                     <th scope="col" aria-label="Empty column" aria-hidden="true"></th>
