Added banner to chamber home page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,6 +22,10 @@
 </head>
 
 <body>
+    <div id="banner" class="close">
+        <h3>Join us for the Nampa Chamber of Commerce meet and greet on Wednesday at 7:00 p.m. See you there!</h3>
+        <button id="bannerButton">×</button>
+    </div>
     <header>
         <div class="small-header">
             <img src="images/logo.webp" alt="Nampa Commerce Logo">
@@ -42,7 +46,7 @@
     <main class="home">
         <div class="hero-section">
             <img id="hero" src="images/chamber-hero.webp" alt="Nampa Train Depot Museum">
-            <button id="action">Join the Chamber</button>
+            <a id="action" class="btn" href="join.html">Join the Chamber!</a>
         </div>
         <div class="site-content">
             <section class="section1">
@@ -120,6 +124,7 @@
     <script src="scripts/dark-mode.js"></script>
     <script src="scripts/windchill.js"></script>
     <script src="scripts/weather.js"></script>
+    <script src="scripts/banner.js"></script>
 </body>
 
 </html>
