Added srcset to home page and changed div to section

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,6 +45,7 @@
     </header>
     <main class="home">
         <div class="hero-section">
+            <source srcset="images/chamber-hero-small.webp" media="(max-width: 650px)">
             <img id="hero" src="images/chamber-hero.webp" alt="Nampa Train Depot Museum">
             <a id="action" class="btn" href="join.html">Join the Chamber!</a>
         </div>
