--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,10 +78,10 @@
                 <h2>Weather</h2>
                 <figure>
                     <img id="weather-icon" src="" alt="">
-                    <div id="weather-info">
+                    <section id="weather-info">
                         <span id="current-temp"> </span> &nbsp;-&nbsp;
                         <figcaption> </figcaption>
-                    </div>
+                    </section>
                 </figure>
                 <table id="forecast-table">
                     <caption>Nampa 3-Day Weather Forecast</caption>
