Redid styling on home page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,26 +53,15 @@
         </div>
         <div class="site-content">
             <section class="section1">
-                <h2>Events</h2>
-                <div class="events">
-                    <p class="event1">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at
-                        vix</p>
-                    <img class="event1" src="images/placeholder.webp" alt="Event 1 image">
-                    <p class="event2">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at
-                        vix</p>
-                    <img class="event2" src="images/placeholder.webp" alt="Event 2 image">
-                    <p class="event3">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at
-                        vix</p>
-                    <img class="event3" src="images/placeholder.webp" alt="Event 3 image">
-                </div>
-                <a href="#" class="section-link">View all events</a>
+                <h2>Business Spotlights</h2>
+                <div id="cards"></div>
             </section>
             <section class="section2">
-                <h2>Business Spotlights</h2>
-                <div class="businesses">
-                    <p class="business1">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos
+                <h2>Events</h2>
+                <div class="events">
+                    <p class="event1">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos
                         at vix</p>
-                    <p class="business2"> Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae
+                    <p class="event2"> Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae
                         legendos at vix</p>
                 </div>
             </section>
@@ -129,6 +118,8 @@
     <script src="scripts/windchill.js"></script>
     <script src="scripts/weather.js"></script>
     <script src="scripts/banner.js"></script>
+    <!-- <script src="scripts/directory.js"></script> -->
+    <script src="scripts/spotlights.js"></script>
 </body>
 
 </html>
