Styled the thank you page

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -40,7 +40,7 @@
         </nav>
     </header>
     <main class="thankyou">
-        <h2>Thank you for applying to the Nampa Chamber of Commerce</h2>
+        <h2>Thank you for applying to the Nampa Chamber of Commerce!</h2>
     </main>
     <footer>
         <img src="images/logo.webp" alt="Nampa Commerce Logo">
