Altered favicon colors

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Directory of Members - Nampa Chamber of Commerce</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Nampa Chamber of Commerce - Directory of Chamber Members</title>
     <meta name="description" content="This is the member directory page for the
-    Nampa Chamber of Commerce site. ">
+    Nampa Chamber of Commerce site. It provides an address, phone number, and website
+    link for each of the chamber members.">
     <meta name="author" content="Jennifer Weber">
 
     <meta property="og:title" content="Nampa Chamber of Commerce Directory Page">
