--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nampa Chamber of Commerce Discover Page</title>
-    <meta name="description" content="This is the discover page for the 
-    Nampa Chamber of Commerce site, created for WDD - 230. ">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Nampa Chamber of Commerce Discover - Find Info and Images of Nampa</title>
+    <meta name="description" content="Discover page for the Nampa Chamber of Commerce. Here you
+    can find general information about Nampa as well as some images of the area.">
     <meta name="author" content="Jennifer Weber">
 
     <meta property="og:title" content="Nampa Chamber of Commerce Discover Page">
