--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nampa Chamber of Commerce Home Page</title>
-    <meta name="description" content="This is the home page for the 
-    Nampa Chamber of Commerce site, created for WDD - 230. ">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Nampa Chamber of Commerce Home - Find Local Businesses and Events</title>
+    <meta name="description" content="Home page of the Nampa Chamber of Commerce. Find 
+    local events, business spotlights, and weather forecasts. Designed for WDD-230.">
     <meta name="author" content="Jennifer Weber">
 
     <meta property="og:title" content="Nampa Chamber of Commerce Home Page">
