--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nampa Chamber of Commerce Join Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Nampa Chamber of Commerce Join Page - Membership Application</title>
     <meta name="description" content="This is the join page for the 
     Nampa Chamber of Commerce site, created for WDD - 230. It is meant to allow prospective 
     members to apply to join the Nampa Chamber of Commerce through a membership application 
