--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nampa Chamber of Commerce Home Page</title>
-    <meta name="description" content="This is the home page for the 
-    Nampa Chamber of Commerce site, created for WDD - 230. ">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Nampa Chamber of Commerce Thank You - Completed Join Form</title>
+    <meta name="description" content="This is the thank you page that follows 
+    successful form submission from the Nampa Chamber of Commerce join page.">
     <meta name="author" content="Jennifer Weber">
 
-    <meta property="og:title" content="Nampa Chamber of Commerce Join Page">
+    <meta property="og:title" content="Nampa Chamber of Commerce Thank You Page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://u.realgeeks.media/stewartrealtyllc/nampa-2100x1440.jpg">
     <meta property="og:url" content="https://jkweber236.github.io/wdd230/chamber/">
@@ -35,8 +35,8 @@
         <nav>
             <a rel="home" href="index.html">Home</a>
             <a rel="discover" href="discover.html">Discover</a>
-            <a rel="directory" href="#">Directory</a>
-            <a rel="join" href="#">Join</a>
+            <a rel="directory" href="directory.html">Directory</a>
+            <a rel="join" href="join.html">Join</a>
         </nav>
     </header>
     <main class="thankyou">
