Added content to events section

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,10 +59,17 @@
             <section class="section2">
                 <h2>Events</h2>
                 <div class="events">
-                    <p class="event1">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos
-                        at vix</p>
-                    <p class="event2"> Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae
-                        legendos at vix</p>
+                    <h3>Ribbon Cutting - Pyrrhic Indoor Sports</h3>
+                    <p class="event1">📅 July 10, 2024 | 🕔 3:00 PM - 4:00 PM<br>
+                        Join us in welcoming Pyrrhic to Nampa! Their new 22,500 sq. ft. indoor facility, located at
+                        former Reel Theater, offers Airsoft, Nerf, Gel Blasters, Laser Tag, and Virtual Reality.
+                    </p>
+                    <h3>Taste of Idaho</h3>
+                    <p class="event2">📅 September 10, 2024 | 🕔 5:00 PM - 8:00 PM<br>
+                        Join us in celebrating the harvest at the Taste of Idaho! Enjoy live music and a delicious
+                        Idaho-inspired menu prepared by local favorites. Don't miss this opportunity to savor the
+                        flavors of Idaho!
+                    </p>
                 </div>
             </section>
             <section class="section3">
