Redid section names

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,27 +52,25 @@
             <a id="action" class="btn" href="join.html">Join the Chamber!</a>
         </div>
         <div class="site-content">
-            <section class="section1">
-                <h2>Business Spotlights</h2>
+            <section class="spotlights">
+                <h2>Member Spotlights</h2>
                 <div id="cards"></div>
             </section>
-            <section class="section2">
+            <section class="events">
                 <h2>Events</h2>
-                <div class="events">
-                    <h3>Ribbon Cutting - Pyrrhic Indoor Sports</h3>
-                    <p class="event1">📅 July 10, 2024 | 🕔 3:00 PM - 4:00 PM<br>
-                        Join us in welcoming Pyrrhic to Nampa! Their new 22,500 sq. ft. indoor facility, located at
-                        former Reel Theater, offers Airsoft, Nerf, Gel Blasters, Laser Tag, and Virtual Reality.
-                    </p>
-                    <h3>Taste of Idaho</h3>
-                    <p class="event2">📅 September 10, 2024 | 🕔 5:00 PM - 8:00 PM<br>
-                        Join us in celebrating the harvest at the Taste of Idaho! Enjoy live music and a delicious
-                        Idaho-inspired menu prepared by local favorites. Don't miss this opportunity to savor the
-                        flavors of Idaho!
-                    </p>
-                </div>
+                <h3>Ribbon Cutting - Pyrrhic Indoor Sports</h3>
+                <p class="event1">📅 July 10, 2024 | 🕔 3:00 PM - 4:00 PM<br>
+                    Join us in welcoming Pyrrhic to Nampa! Their new 22,500 sq. ft. indoor facility, located at
+                    former Reel Theater, offers Airsoft, Nerf, Gel Blasters, Laser Tag, and Virtual Reality.
+                </p>
+                <h3>Taste of Idaho</h3>
+                <p class="event2">📅 September 10, 2024 | 🕔 5:00 PM - 8:00 PM<br>
+                    Join us in celebrating the harvest at the Taste of Idaho! Enjoy live music and a delicious
+                    Idaho-inspired menu prepared by local favorites. Don't miss this opportunity to savor the
+                    flavors of Idaho!
+                </p>
             </section>
-            <section class="section3">
+            <section class="weather">
                 <h2>Weather</h2>
                 <figure>
                     <img id="weather-icon" src="images/placeholder.webp" alt="Weather Icon">
