--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Nampa Chamber of Commerce Home Page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://u.realgeeks.media/stewartrealtyllc/nampa-2100x1440.jpg">
-    <meta property="og:url" content="https://jkweber236.github.io/wdd230/chamber/">
+    <meta property="og:url" content="https://jkweber236.github.io/wdd230/chamber/index.html">
 
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
